[BugFix] Fix window output partition propery (#60344)
Signed-off-by: Seaven <seaven_7@qq.com>